# framecat

./: .coveragerc  .gitignore  README.rst  pyproject.toml
.github/workflows/: docs.yml
catenaminer/: __init__.py  apps.py  loss.py  plotting.py
docs/: api.rst  cli.rst  conf.py  index.rst
framecat/: __init__.py  apps.py  metrics.py  plotting.py
tests/: test_apps.py
